--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,16 @@ twitter_username: RobinDrexler
 github_username:  robin-drexler
 production_url: https://www.robin-drexler.com
 
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+      type: "posts" # previously `post` in Jekyll 2.2.
+    values:
+      image: "/assets/img/me.jpg"
+      image_height: 706
+      image_width: 706
+
 # Build settings
 markdown: kramdown
 theme: minima
